--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dev:server": "turbo -F @social-media-app/backend dev",
     "dev:setup": "turbo -F @social-media-app/backend dev:setup"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@radix-ui/themes": "^3.2.1"
+  },
   "devDependencies": {
     "turbo": "^2.5.4"
   },
