--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,17 @@
 		"build": {
 			"dependsOn": ["^build"],
 			"inputs": ["$TURBO_DEFAULT$", ".env*"],
-			"outputs": ["dist/**"]
+			"outputs": ["dist/**"],
+			"env": [
+				"NEXT_PUBLIC_CONVEX_URL",
+				"NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
+				"CLERK_SECRET_KEY",
+				"CONVEX_DEPLOYMENT",
+				"CONVEX_URL",
+				"ISSUER",
+				"JWKS_ENDPOINT",
+				"CLERK_JWT_ISSUER_DOMAIN"
+			]
 		},
 		"lint": {
 			"dependsOn": ["^lint"]
