--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,24 +16,21 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.27.0",
+    "filepond": "^4.30.7",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-filepond": "^7.1.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.4",
-    "zod": "^4.1.12",
-    "babel-plugin-react-compiler": "^1.0.0",
-    "convex": "^1.27.0",
-    "@social-media-app/backend": "*",
-    "@clerk/nextjs": "^6.31.5",
-    "filepond": "^4.30.7",
-    "react-filepond": "^7.1.2",
-    "filepond-plugin-image-preview": "^4.6.12",
-    "filepond-plugin-file-validate-type": "^1.2.8"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
